# mosaic_stress_2021

./: LICENSE  README.md
src/1_BaselineLabels/: shuffle_baseline.py
src/2_FeatureCorrectionAndFilter/: feature_correction.py  keep_all_cols.csv  keep_non_survey_context_cols.csv  keep_non_survey_context_cols2.csv
src/3_PrecomputedFolds/: settings_predefined_folds.py
src/4_MachineLearning/: all_feats.txt  all_feats_wo_context.txt  cm2_settings_ml_cross_subj_all_features_wo_survey_context_gru.py  cm2_settings_ml_cross_subj_all_features_wo_survey_context_gru_shuffle_baseline.py  cm2_settings_ml_cross_subj_all_features_wo_survey_context_gru_shuffle_within_subj_baseline.py  cm2_settings_ml_cross_subj_all_features_wo_survey_context_lstm3.py  cm2_settings_ml_cross_subj_all_features_wo_survey_context_lstm3_shuffle_baseline.py  cm2_settings_ml_cross_subj_all_features_wo_survey_context_lstm3_shuffle_within_subj_baseline.py  (+28 more)
tools/common-models2/: README.md  setup.cfg
tools/common-models2/samples/: pytorch_test.py  sklearn_test.py  tf_fashion.py  tf_test.py
tools/common-models2/src/commonmodels2/: __init__.py
tools/common-models2/src/commonmodels2/io/: data_container.py
tools/common-models2/src/commonmodels2/log/: logger.py
tools/common-models2/src/commonmodels2/models/: model.py
tools/common-models2/src/commonmodels2/stages/: cross_validation.py  evaluation_stage.py  load_data.py  pipeline.py  prediction_stage.py  preprocessing.py  stage_base.py  training_stage.py
tools/common-models2/src/commonmodels2/utils/: singleton.py  utils.py
(+75 files in other folders)
