[metadata]
name = commonmodels2
version = 0.1.0

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
install_requires =
    scikit-learn == 1.0
    tensorflow == 2.6.0
    tensorflow_datasets == 4.5.2
    tensorflowjs == 3.14.0
    keras==2.6.0
    joblib == 1.1.0
    numpy == 1.19.5
    pandas == 1.3.3
    utils == 1.0.1
    pip == 21.3.1
    wheel == 0.36.2
    lxml == 4.6.3
    setuptools == 57.0.0
    torch == 1.11.0
    skorch == 0.11.0

[options.packages.find]
where=src
